--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -26,7 +26,7 @@
         android:id="@+id/schedule_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="me.minhael.recorder.ScheduleFragment"
+        android:name="me.minhael.recorder.ui.ScheduleFragment"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
