--- a/app/src/main/res/layout/item_pref.xml
+++ b/app/src/main/res/layout/item_pref.xml
@@ -4,17 +4,20 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="4dp"
-    android:gravity="center">
+    android:padding="12dp"
+    android:gravity="center"
+    android:background="?selectableItemBackground">
 
     <TextView
+        style="@style/TextAppearance.MaterialComponents.Body1"
         android:id="@+id/item_pref_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
+        android:layout_marginEnd="4dp"
         tools:text="Label" />
 
     <TextView
+        style="@style/TextAppearance.MaterialComponents.Body2"
         android:id="@+id/item_pref_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
