feat: google firebase services
analytics
crashlytics
performance

--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -24,6 +24,7 @@
         android:id="@+id/record_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:name="me.minhael.recorder.view.RecorderFragment"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
