--- a/app/src/main/res/layout/fragment_recorder.xml
+++ b/app/src/main/res/layout/fragment_recorder.xml
@@ -5,6 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/recorder_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="1000" />
+
     <Button
         android:id="@+id/recorder_btn"
         android:layout_width="wrap_content"
